# backend/api/routes/PostRoutes.go
@@ -14,11 +14,13 @@ func SetupPostRoutes(app *fiber.App) {
 	// getall
 	app.Get("/posts", controllers.GetAllPosts)
 	// search
+	app.Get("/posts/search", controllers.GetPostsUsersBySearch)
 	// get one
 	app.Get("/posts/:id", controllers.GetPost)
 	// update
 	app.Patch("/posts/:id", middleware.AuthMiddleware, validation.ValidatePost, controllers.UpdatePost)
 	// comment
+	app.Post("/posts/:id/commentPost", middleware.AuthMiddleware, controllers.CommentPost)
 	// like
 	// delete
 }
